--- a/printer.html
+++ b/printer.html
@@ -20,11 +20,11 @@
         <div class="bar3"></div>
       </div>
       <p>
-        <a href="/printer.html" class="logo" class="nav-links">Return</a>
+        <a href="./printer.html" class="logo" class="nav-links">Return</a>
       </p>
       <ul class="main-nav" id="js-menu">
         <li>
-          <a href="/" class="nav-links">Back To CCU Money Settings</a>
+          <a href="./index.html" class="nav-links">Back To CCU Money Settings</a>
         </li>
       </ul>
     </nav>
