Stubbed out basic ch default button page.

--- a/button_config.html
+++ b/button_config.html
@@ -9,7 +9,7 @@
 
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/printer.js"></script>
-    <title>Printer Settings</title>
+    <title>Button Configuration</title>
   </head>
   <body>
     <nav class="navbar">
@@ -20,29 +20,22 @@
         <div class="bar3"></div>
       </div>
       <p>
-        <a id="printer-settings" href="./printer.html" class="logo"
-        >Printer Settings</a
-      >
-      <a id="back-button" href="./printer.html" class="logo">Return</a>      </p>
+        <a href="./printer.html" class="logo" class="nav-links">CCU Button Configuration</a>
+      </p>
       <ul class="main-nav" id="js-menu">
         <li>
           <a href="./index.html" class="nav-links">Back To CCU Money Settings</a>
         </li>
         <li>
-          <a href="./button_config.html" class="nav-links"
-            >Camera Head Button Configuration</a
-          >
-        </li>
+            <a href="./printer.html" class="nav-links">Printer Settings</a>
+          </li>
       </ul>
     </nav>
     <!-- Added Note to commit-->
     <!-- printer-wrapper-->
     <header class="printer-wrapper">
-      <!-- <div class="title-div">
-        <h1 class="">Printer Settings Coming Soon!</h1>
-      </div> -->
       <div class="title-div">
-        <h1 id="title-element" class="">Select SDC</h1>
+        <h1 id="title-element" class="">Select CCU</h1>
       </div>
       <div id="sdc-div">
         <div class="printer-title">
@@ -85,3 +78,4 @@
     </header>
   </body>
 </html>
+
