--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
           <li>
             <a href="./printer.html" class="nav-links">Printer Settings</a>
           </li>
+          <li>
+            <a href="./button_config.html" class="nav-links"
+              >Camera Head Button Configuration</a
+            >
+          </li>
         </ul>
       </nav>
       <div class="dark-overlay">
