Added button's landing page.

--- a/button_config.html
+++ b/button_config.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/navbar.css" />
-    <link rel="stylesheet" href="./css/printer.css" />
+    <link rel="stylesheet" href="./css/button_config.css" />
 
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/printer.js"></script>
@@ -20,7 +20,7 @@
         <div class="bar3"></div>
       </div>
       <p>
-        <a href="./printer.html" class="logo" class="nav-links">CCU Button Configuration</a>
+        <a href="./button_config.html" class="logo" class="nav-links">CCU Button Configuration</a>
       </p>
       <ul class="main-nav" id="js-menu">
         <li>
@@ -33,48 +33,28 @@
     </nav>
     <!-- Added Note to commit-->
     <!-- printer-wrapper-->
-    <header class="printer-wrapper">
+    <header class="button-config-wrapper">
       <div class="title-div">
         <h1 id="title-element" class="">Select CCU</h1>
       </div>
-      <div id="sdc-div">
-        <div class="printer-title">
-      <!-- Capture Device Buttons -->
-       <div id="top-sdc-div"class="sdc-div">
+      <div id="ccu-div">
+        <div class="ccu-title">
+      <!-- CCU Buttons -->
+       <div id="top-ccu-div"class="ccu-div">
             <div class="first-botton-div">
-              <div id="hub" class="sdc-buttons-div" align="center">
+              <div id="sixteen" class="ccu-buttons-div" align="center">
                 <a
                   class="example_a"
                   href="#"
                   rel="nofollow noopener"
-                  data-sdc="hub"
-                  >HUB</a
+                  ccu-data="sixteen"
+                  >1688 Buttons</a
                 >
               </div>
             </div>
-            <div id="sdc3" class="sdc-buttons-div" align="center">
-              <a
-                class="example_a"
-                href="#"
-                rel="nofollow noopener"
-                data-sdc="sdc3"
-                >SDC3</a
-              >
-          </div>
-          <div id="sdc-ultra" class="sdc-buttons-div" align="center">
-            <a
-              class="example_a"
-              href="#"
-              rel="nofollow noopener"
-              data-sdc="sdc-ultra"
-              >SDC Ultra</a
-            >
-          </div>
         </div>
       </div>
-      <div id="specialty-div"></div>
-      <div id="printer-div"></div>
-      <div id="settings-div"></div>
+      <div id="button-config-div"></div>
     </header>
   </body>
 </html>
