Added camera head button configuration feature.

--- a/button_config.html
+++ b/button_config.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/button_config.css" />
 
     <script src="./javascript/navbar.js"></script>
-    <script src="./javascript/printer.js"></script>
+    <script src="./javascript/button_config.js"></script>
     <title>Button Configuration</title>
   </head>
   <body>
@@ -37,6 +37,7 @@
       <div class="title-div">
         <h1 id="title-element" class="">Select CCU</h1>
       </div>
+      <div id="diagram-show-div"></div>
       <div id="ccu-div">
         <div class="ccu-title">
       <!-- CCU Buttons -->
@@ -47,8 +48,8 @@
                   class="example_a"
                   href="#"
                   rel="nofollow noopener"
-                  ccu-data="sixteen"
-                  >1688 Buttons</a
+                  data-ccu="sixteen"
+                  >1688 CH</a
                 >
               </div>
             </div>
