Added breadcrumbs so user can see what they have chosen.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <a id="money-settings" href="./index.html" class="logo"
           >Money Settings</a
         >
+        <!-- remove href="./index.html" to test back button-->
+        <!-- <p id="back-button " class="logo">Back</p> -->
         <a id="back-button" href="./index.html" class="logo">Return</a>
         <ul class="main-nav" id="js-menu">
           <li>
