Working on back functionality.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
           >Money Settings</a
         >
         <!-- remove href="./index.html" to test back button-->
-        <!-- <p id="back-button " class="logo">Back</p> -->
-        <a id="back-button" href="./index.html" class="logo">Return</a>
+        <div id="back-button" class="logo">
+          <img src="./images/arrow.png" alt="back-arrow" />
+        </div>
+        <!-- <a id="back-button" href="./index.html" class="logo">Return</a> -->
         <ul class="main-nav" id="js-menu">
           <li>
-            <a href="./printer.html" class="nav-links">Printer Settings</a>
+            <!-- <a href="./printer.html" class="nav-links">Printer Settings</a> -->
           </li>
         </ul>
       </nav>
