--- a/index.html
+++ b/index.html
@@ -42,65 +42,40 @@
               <h1 class="select-text">Select CCU</h1>
             </div>
             <div id="1688" class="camera-buttons-div" align="center">
-              <a
-                class="example_a"
-                href="#"
-                rel="nofollow noopener"
-                data-camera="1688"
+              <a class="camera-button button" href="#" data-camera="1688"
                 >1688</a
               >
             </div>
             <div id="1588" class="camera-buttons-div" align="center">
-              <a
-                class="example_a"
-                href="#"
-                rel="nofollow noopener"
-                data-camera="1588"
+              <a class="camera-button button" href="#" data-camera="1588"
                 >1588</a
               >
             </div>
             <div id="Precision" class="camera-buttons-div" align="center">
               <a
-                class="example_a"
+                class="camera-button button"
                 href="#"
-                rel="nofollow noopener"
                 data-camera="Precision AC"
                 >Precision</a
               >
             </div>
             <div id="1488" class="camera-buttons-div" align="center">
-              <a
-                class="example_a"
-                href="#"
-                rel="nofollow noopener"
-                data-camera="1488"
+              <a class="camera-button button" href="#" data-camera="1488"
                 >1488</a
               >
             </div>
             <div id="1288" class="camera-buttons-div" align="center">
-              <a
-                class="example_a"
-                href="#"
-                rel="nofollow noopener"
-                data-camera="1288"
+              <a class="camera-button button" href="#" data-camera="1288"
                 >1288</a
               >
             </div>
             <div id="1188" class="camera-buttons-div" align="center">
-              <a
-                class="example_a"
-                href="#"
-                rel="nofollow noopener"
-                data-camera="1188"
+              <a class="camera-button button" href="#" data-camera="1188"
                 >1188</a
               >
             </div>
             <div id="flexible" class="camera-buttons-div" align="center">
-              <a
-                class="example_a"
-                href="#"
-                rel="nofollow noopener"
-                data-camera="Flexible"
+              <a class="camera-button button" href="#" data-camera="Flexible"
                 >Flexible</a
               >
             </div>
