--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
           <div class="bar2"></div>
           <div class="bar3"></div>
         </div>
+        <div id="home-icon-div-hide">
+          <img src="./images/home.png" alt="home" />
+        </div>
 
         <a id="money-settings" href="./index.html" class="logo"
           >Money Settings</a
