Removed some parameters and settings that are incomplete, and not yet ready to be released.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- <a id="back-button" href="./index.html" class="logo">Return</a> -->
         <ul class="main-nav" id="js-menu">
           <li>
-            <!-- <a href="./printer.html" class="nav-links">Printer Settings</a> -->
+            <a href="./printer.html" class="nav-links">Printer Settings</a>
           </li>
         </ul>
       </nav>
