Trying to fix heroku bug.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
           <div class="bar3"></div>
         </div>
         <div id="home-icon-div-hide">
-          <img src="./images/home.jpg" alt="home" />
+          <p class="home-tag">Home</p>
+          <!-- <img src="./images/home.jpg" alt="home" /> -->
         </div>
 
         <a id="money-settings" href="./index.html" class="logo"
@@ -28,7 +29,8 @@
         >
         <!-- remove href="./index.html" to test back button-->
         <div id="back-button" class="logo">
-          <img src="./images/arrow.jpg" alt="back-arrow" />
+          <p class="arrow-tag">Back</p>
+          <!-- <img src="./images/arrow.jpg" alt="back-arrow" /> -->
         </div>
         <!-- <a id="back-button" href="./index.html" class="logo">Return</a> -->
         <ul class="main-nav" id="js-menu">
