Trying to fix bug.

--- a/index.html
+++ b/index.html
@@ -47,40 +47,27 @@
               <h1 class="select-text">Select CCU</h1>
             </div>
             <div id="1688" class="camera-buttons-div" align="center">
-              <a class="camera-button button" href="#" data-camera="1688"
-                >1688</a
-              >
+              <a class="camera-button" href="#" data-camera="1688">1688</a>
             </div>
             <div id="1588" class="camera-buttons-div" align="center">
-              <a class="camera-button button" href="#" data-camera="1588"
-                >1588</a
-              >
+              <a class="camera-button" href="#" data-camera="1588">1588</a>
             </div>
             <div id="Precision" class="camera-buttons-div" align="center">
-              <a
-                class="camera-button button"
-                href="#"
-                data-camera="Precision AC"
+              <a class="camera-button" href="#" data-camera="Precision AC"
                 >Precision</a
               >
             </div>
             <div id="1488" class="camera-buttons-div" align="center">
-              <a class="camera-button button" href="#" data-camera="1488"
-                >1488</a
-              >
+              <a class="camera-button" href="#" data-camera="1488">1488</a>
             </div>
             <div id="1288" class="camera-buttons-div" align="center">
-              <a class="camera-button button" href="#" data-camera="1288"
-                >1288</a
-              >
+              <a class="camera-button" href="#" data-camera="1288">1288</a>
             </div>
             <div id="1188" class="camera-buttons-div" align="center">
-              <a class="camera-button button" href="#" data-camera="1188"
-                >1188</a
-              >
+              <a class="camera-button" href="#" data-camera="1188">1188</a>
             </div>
             <div id="flexible" class="camera-buttons-div" align="center">
-              <a class="camera-button button" href="#" data-camera="Flexible"
+              <a class="camera-button" href="#" data-camera="Flexible"
                 >Flexible</a
               >
             </div>
