Possible fix to bug.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
           <div class="bar3"></div>
         </div>
         <div id="home-icon-div-hide">
-          <p class="home-tag">Home</p>
-          <!-- <img src="./images/home.jpg" alt="home" /> -->
+          <img src="./images/home.jpg" alt="home" />
         </div>
 
         <a id="money-settings" href="./index.html" class="logo"
@@ -29,8 +28,7 @@
         >
         <!-- remove href="./index.html" to test back button-->
         <div id="back-button" class="logo">
-          <p class="arrow-tag">Back</p>
-          <!-- <img src="./images/arrow.jpg" alt="back-arrow" /> -->
+          <img src="./images/arrow.jpg" alt="back-arrow" />
         </div>
         <!-- <a id="back-button" href="./index.html" class="logo">Return</a> -->
         <ul class="main-nav" id="js-menu">
