--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/navbar.css" />
+    <link rel="stylesheet" href="./css/default.css" />
     <script src="./javascript/settings.js"></script>
     <script src="./javascript/navbar.js"></script>
+    <script src="./javascript/defaultSettings.js"></script>
     <title>Tech Support App - Money Settings</title>
   </head>
   <body>
@@ -20,7 +22,7 @@
           <div class="bar3"></div>
         </div>
         <div id="home-icon-div-hide">
-          <img src="./images/home.jpg" alt="home" />
+          <img src="./images/home 2.jpg" alt="home" />
         </div>
 
         <a id="money-settings" href="./index.html" class="logo"
@@ -28,17 +30,22 @@
         >
         <!-- remove href="./index.html" to test back button-->
         <div id="back-button" class="logo">
-          <img src="./images/arrow.jpg" alt="back-arrow" />
+          <img src="./images/arrow 2.jpg" alt="back-arrow" />
         </div>
         <!-- <a id="back-button" href="./index.html" class="logo">Return</a> -->
         <ul class="main-nav" id="js-menu">
           <li>
             <a href="./printer.html" class="nav-links">Printer Settings</a>
           </li>
+          <li>
+            <p id="default-settings-button" class="default-settings-text">
+              Default Settings
+            </p>
+          </li>
         </ul>
       </nav>
       <div class="dark-overlay">
-        <div class="image-div">
+        <div id="image-div">
           <!-- Camera Buttons -->
           <div id="top-camera-div" class="camera-div">
             <div class="title-div">
