Added ccu button to default settings functionality.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="bar3"></div>
         </div>
         <div id="home-icon-div-hide">
-          <img src="./images/home 2.jpg" alt="home" />
+          <img src="./images/home.jpg" alt="home" />
         </div>
 
         <a id="money-settings" href="./index.html" class="logo"
@@ -30,17 +30,21 @@
         >
         <!-- remove href="./index.html" to test back button-->
         <div id="back-button" class="logo">
-          <img src="./images/arrow 2.jpg" alt="back-arrow" />
+          <img src="./images/arrow.jpg" alt="back-arrow" />
         </div>
         <!-- <a id="back-button" href="./index.html" class="logo">Return</a> -->
         <ul class="main-nav" id="js-menu">
           <li>
-            <a href="./printer.html" class="nav-links">Printer Settings</a>
+            <div class="navbar-button">
+              <a href="./printer.html" class="nav-links">Printer Settings</a>
+            </div>
           </li>
           <li>
-            <p id="default-settings-button" class="default-settings-text">
-              Default Settings
-            </p>
+            <div class="navbar-button">
+              <p id="default-settings-button" class="default-settings-text">
+                Default Settings
+              </p>
+            </div>
           </li>
         </ul>
       </nav>
