Fixed a bug that involved the money settings' back-button and the default settings back-button.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <div id="back-button" class="logo">
           <img src="./images/arrow.jpg" alt="back-arrow" />
         </div>
+        <div id="default-back-button" class="default-logo">
+          <img src="./images/arrow.jpg" alt="back-arrow" />
+        </div>
         <!-- <a id="back-button" href="./index.html" class="logo">Return</a> -->
         <ul class="main-nav" id="js-menu">
           <li>
