--- a/printer.html
+++ b/printer.html
@@ -14,14 +14,21 @@
   <body>
     <nav class="navbar">
       <!-- Nav-menu Div-->
+      <div id="home-icon-printer"></div>
       <div class="container" id="js-navbar-toggle">
         <div class="bar1"></div>
         <div class="bar2"></div>
         <div class="bar3"></div>
       </div>
+      <div id="printer-home-icon-div-hide">
+       <a href="./index.html" class="money-settings-home-anchor"><img src="./images/home.jpg" alt="home" /></a>  
+      </div>
       <p>
-        <a href="./printer.html" class="logo" class="nav-links">Return</a>
+        <a href="./printer.html" id="printer-logo" class="logo" class="nav-links">Printer Settings</a>
       </p>
+      <div id="printer-back-button" class="default-logo">
+        <img src="./images/arrow.jpg" alt="back-arrow" />
+      </div>
       <ul class="main-nav" id="js-menu">
         <li>
           <a href="./index.html" class="nav-links">Back To CCU Money Settings</a>
