Rewritting the printer feature to better utiliyze the back-button functionality.

--- a/printer.html
+++ b/printer.html
@@ -78,6 +78,34 @@
             >
           </div>
         </div>
+        <div id="top-printer-specialty-div"class="printer-specialty-div">
+          <div class="first-botton-div">
+            <div id="Laparoscopy" class="printer-specialty-buttons-div" align="center">
+              <a
+                class="printer-example_a"
+                href="#"
+                data-sdc="Laparoscopy"
+                >Laparoscopy</a
+              >
+            </div>
+          </div>
+          <div id="Arthroscopy" class="printer-specialty-buttons-div" align="center">
+            <a
+              class="printer-example_a"
+              href="#"
+              data-sdc="Arthroscopy"
+              >Arthroscopy</a
+            >
+        </div>
+        <div id="Spi-phi" class="printer-specialty-buttons-div" align="center">
+          <a
+            class="printer-example_a"
+            href="#"
+            data-sdc="Spi-phi"
+            >Spi-phi</a
+          >
+        </div>
+      </div>
       </div>
       <div id="specialty-div"></div>
       <div id="printer-div"></div>
