Building the printers settings to incorporate the back-button functionality.

--- a/printer.html
+++ b/printer.html
@@ -78,34 +78,55 @@
             >
           </div>
         </div>
-        <div id="top-printer-specialty-div"class="printer-specialty-div">
+        <div id="top-printer-specialty-div" style="display:none" class="printer-specialty-div">
           <div class="first-botton-div">
             <div id="Laparoscopy" class="printer-specialty-buttons-div" align="center">
               <a
-                class="printer-example_a"
+                class="printer-specialty-example_a"
                 href="#"
-                data-sdc="Laparoscopy"
+                data-specialty="Laparoscopy"
                 >Laparoscopy</a
               >
             </div>
           </div>
           <div id="Arthroscopy" class="printer-specialty-buttons-div" align="center">
             <a
-              class="printer-example_a"
+              class="printer-specialty-example_a"
               href="#"
-              data-sdc="Arthroscopy"
+              data-specialty="Arthroscopy"
               >Arthroscopy</a
             >
         </div>
         <div id="Spi-phi" class="printer-specialty-buttons-div" align="center">
           <a
-            class="printer-example_a"
+            class="printer-specialty-example_a"
             href="#"
-            data-sdc="Spi-phi"
+            data-specialty="Spi-phi"
             >Spi-phi</a
           >
         </div>
       </div>
+      <div id="top-printer-printers-div" style="display:none" class="printer-printers-div">
+        <div class="first-botton-div">
+          <div id="SDCP1000" class="printer-printers-buttons-div" align="center">
+            <a
+              class="printer-example_a"
+              href="#"
+              data-specialty="SDP1000"
+              >SDP1000</a
+            >
+          </div>
+        </div>
+        <div id="SDP1000 ALT" class="printer-specialty-buttons-div" align="center">
+          <a
+            class="printer-example_a"
+            href="#"
+            data-specialty="SDCP1000.alt"
+            >SDP1000 Alt.</a
+          >
+      </div>
+    </div>
+      
       </div>
       <div id="specialty-div"></div>
       <div id="printer-div"></div>
