Changed spy-phi button from spi-phi to the correct spy-phi in the printer settings.

--- a/printer.html
+++ b/printer.html
@@ -128,7 +128,7 @@
                 class="printer-specialty-example_a"
                 href="#"
                 data-specialty="Spi-phi"
-                >Spi-phi</a
+                >Spy-phi</a
               >
             </div>
           </div>
