Added sofware version text box.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
           <!-- CCU Settings Div-->
           <div id="ccuSettingsTopDiv"></div>
 
+          <!-- Software Version Text Box Div-->
+          <div id="software-version-text-box-div"></div>
+
           <!-- Monitor Settings Div-->
           <div id="monitorSettingsTopDiv"></div>
         </div>
