Added the 4.0.13 settings.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
           <!-- Software Version Text Box Div-->
           <div id="software-version-text-box-div"></div>
 
+          <!-- Software Version Settings Div-->
+          <div id="software-version-settings-div"></div>
+
           <!-- Monitor Settings Div-->
           <div id="monitorSettingsTopDiv"></div>
         </div>
