Added form link button.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
               </p>
             </div>
           </li>
+          <li>
+            <div class="navbar-button">
+              <a
+                href="https://forms.office.com/Pages/ResponsePage.aspx?id=-7udTko5g0WIEFP4H4GeOyvF9t6kmYZAnEVeps1nibRUN1VTTEZYNjZKNDRSWTJXUE00U05NTktIQi4u"
+                id="form-button"
+                class="default-settings-text"
+              >
+                Settings Form
+              </a>
+            </div>
+          </li>
         </ul>
       </nav>
       <div class="dark-overlay">
