--- a/printer.html
+++ b/printer.html
@@ -21,7 +21,7 @@
         <div class="bar3"></div>
       </div>
       <div id="printer-home-icon-div-hide">
-        <a href="./index.html" class="money-settings-home-anchor"
+        <a href="./msa.html" class="money-settings-home-anchor"
           ><img src="./images/home.jpg" alt="home"
         /></a>
       </div>
@@ -39,9 +39,7 @@
       </div>
       <ul class="main-nav" id="js-menu">
         <li>
-          <a href="./index.html" class="nav-links"
-            >Back To CCU Money Settings</a
-          >
+          <a href="./msa.html" class="nav-links">Back To CCU Money Settings</a>
         </li>
       </ul>
     </nav>
@@ -90,7 +88,7 @@
           </div>
           <div
             id="top-printer-specialty-div"
-            style="display: none;"
+            style="display: none"
             class="printer-specialty-div"
           >
             <div class="first-botton-div">
@@ -134,7 +132,7 @@
           </div>
           <div
             id="top-printer-printers-div"
-            style="display: none;"
+            style="display: none"
             class="printer-printers-div"
           >
             <div class="first-botton-div">
@@ -162,7 +160,7 @@
         <!-- Printer settings divs -->
         <div id="printer-settings-main-div">
           <!-- Arthroscopy Printer Settings -->
-          <div id="hub-arthro-settings-div" style="display: none;">
+          <div id="hub-arthro-settings-div" style="display: none">
             <div class="hub-printer-settings-title-div">
               <h3 class="settings-title-h3">1688 Arthroscopy</h3>
               <p class="title-text-printer-settings">Printer Settings</p>
@@ -232,7 +230,7 @@
           </div>
           <!-- Laparscopy Printer Settings -->
 
-          <div id="hub-lap-settings-div" style="display: none;">
+          <div id="hub-lap-settings-div" style="display: none">
             <div class="hub-printer-settings-title-div">
               <h3 class="settings-title-h3">1688 Laparoscopy</h3>
               <p class="title-text-printer-settings">Printer Settings</p>
@@ -301,7 +299,7 @@
             </div>
           </div>
           <!-- SpyPhi Printer Settings -->
-          <div id="hub-spy-settings-div" style="display: none;">
+          <div id="hub-spy-settings-div" style="display: none">
             <div class="hub-printer-settings-title-div">
               <h3 class="settings-title-h3">1688 Spi-Phi</h3>
               <p class="title-text-printer-settings">Printer Settings</p>
@@ -370,8 +368,8 @@
             </div>
           </div>
           <!-- SDC Printer Settings-->
-          <div id="sdc-printer-settings-div" style="display: block;">
-            <div id="sdc-sdp1000-settings-div" style="display: none;">
+          <div id="sdc-printer-settings-div" style="display: block">
+            <div id="sdc-sdp1000-settings-div" style="display: none">
               <div class="sdc-printer-settings-title-div">
                 <h3 class="settings-title-h3">SDC3 SDP1000</h3>
                 <p class="title-text-printer-settings">Printer Settings</p>
@@ -445,7 +443,7 @@
             </div>
           </div>
           <!-- Printer SDC1000 Alt settings -->
-          <div id="sdc-sdp1000-alt-settings-div" style="display: none;">
+          <div id="sdc-sdp1000-alt-settings-div" style="display: none">
             <div class="sdc-printer-settings-title-div">
               <h3 class="settings-title-h3">SDC3 SDP1000 (Alternative)</h3>
               <p class="title-text-printer-settings">Printer Settings</p>
@@ -519,7 +517,7 @@
           </div>
           <!-- Printer end SDC1000 alt -->
           <!-- SDC-Ultra SDC1000 -->
-          <div id="sdc-ultra-sdp1000-settings-div" style="display: none;">
+          <div id="sdc-ultra-sdp1000-settings-div" style="display: none">
             <div class="sdc-printer-settings-title-div">
               <h3 class="settings-title-h3">SDC Ultra SDP1000</h3>
               <p class="title-text-printer-settings">Printer Settings</p>
@@ -593,7 +591,7 @@
           </div>
           <!-- SDC-Ultra SDC1000 end -->
           <!-- SDC-Ultra SDC1000.alt -->
-          <div id="sdc-ultra-sdp1000-alt-settings-div" style="display: none;">
+          <div id="sdc-ultra-sdp1000-alt-settings-div" style="display: none">
             <div class="sdc-printer-settings-title-div">
               <h3 class="settings-title-h3">SDC Ultra SDP1000 (Alternative)</h3>
               <p class="title-text-printer-settings">Printer Settings</p>
