Adding landing page cards.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
         <h3 class="index-nav-text">Tech Support App</h3>
       </div>
     </nav>
-    <div class="index-header"></div>
+    <div class="cards-container">
+      <div id="msa-card" class="card-container">
+        <div class="card-img-div"></div>
+        <div class="card-title-div"></div>
+        <div class="card-text-div"></div>
+        <div class="card-btn-div"></div>
+      </div>
+    </div>
     <button id="msa-button" class="msa-button">Test Button</button>
   </body>
 </html>
