Adding the msa card.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
     <div class="cards-container">
       <div id="msa-card" class="card-container">
         <div class="card-img-div"></div>
-        <div class="card-title-div"></div>
-        <div class="card-text-div"></div>
+        <div class="card-title-div">
+          <h3 class="card-title-text">Money Settings</h3>
+        </div>
+        <div class="card-text-div">
+          <p class="card-text-text">
+            The most current money settings for our 1688 platform and legacy
+            equiptment.
+          </p>
+        </div>
         <div class="card-btn-div"></div>
       </div>
     </div>
