Added the printer settings card and the default card.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
         </div>
         <div class="card-btn-div"></div>
       </div>
+      <div id="printer-card" class="card-container">
+        <div id="printer-card-img-div" class="card-img-div"></div>
+        <div class="card-title-div">
+          <h3 class="card-title-text">Printer Settings</h3>
+        </div>
+        <div class="card-text-div">
+          <p class="card-text-text">
+            The most current money settings for SDP1000.
+          </p>
+        </div>
+        <div class="card-btn-div"></div>
+      </div>
+      <div id="default-card" class="card-container">
+        <div id="default-card-img-div" class="card-img-div"></div>
+        <div class="card-title-div">
+          <h3 class="card-title-text">Default Settings</h3>
+        </div>
+        <div class="card-text-div">
+          <p class="card-text-text">
+            The default settings for the 1688 CCU and our legacy CCUs.
+          </p>
+        </div>
+        <div class="card-btn-div"></div>
+      </div>
     </div>
     <button id="msa-button" class="msa-button">Test Button</button>
   </body>
