Added the share settings feature.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,19 @@
         </div>
         <div class="card-btn-div"></div>
       </div>
+      <div id="contribute-settings-card" class="card-container">
+        <div id="contribute-settings-card-img-div" class="card-img-div"></div>
+        <div class="card-title-div">
+          <h3 class="card-title-text">Share Your Settings</h3>
+        </div>
+        <div class="card-text-div">
+          <p class="card-text-text">
+            Do you have settings that are perfectly dialed in? Share them here
+            with the sales force team.
+          </p>
+        </div>
+        <div class="card-btn-div"></div>
+      </div>
     </div>
-    <button id="msa-button" class="msa-button">Test Button</button>
   </body>
 </html>
