Added the Storz card to the landing page.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
         </div>
         <div class="card-btn-div"></div>
       </div>
+      <!-- Storz -->
+      <div id="storz-card" class="card-container">
+        <div id="storz-card-img-div" class="card-img-div"></div>
+        <div class="card-title-div">
+          <h3 class="card-title-text">1688 Storz Settings</h3>
+        </div>
+        <div class="card-text-div">
+          <p class="card-text-text">
+            The most current Storz settings for our 1688 platform.
+          </p>
+        </div>
+        <div class="card-btn-div"></div>
+      </div>
+      <!-- Storz end -->
       <div id="printer-card" class="card-container">
         <div id="printer-card-img-div" class="card-img-div"></div>
         <div class="card-title-div">
