--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
         </div>
         <div class="card-btn-div"></div>
       </div>
+      <div id="contact-card" class="card-container">
+        <div id="contact-card-img-div" class="card-img-div"></div>
+        <div id="contact-card-title" class="card-title-div">
+          <h3 class="card-title-text">Contact Us</h3>
+        </div>
+        <div class="card-text-div">
+          <p class="card-text-text">
+       Need help? Reach out to the Tech Support Team early and often.
+          </p>
+        </div>
+        <div class="card-btn-div"></div>
+      </div>
     </div>
   </body>
 </html>
