--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="card-text-div">
           <p class="card-text-text">
-            The most current money settings for SDP1000.
+            The most current printer settings for the SDP1000.
           </p>
         </div>
         <div class="card-btn-div"></div>
@@ -61,7 +61,7 @@
         </div>
         <div class="card-text-div">
           <p class="card-text-text">
-            The default settings for the 1688 CCU and our legacy CCUs.
+            The default settings for the 1688 CCU and our many of our legacy CCUs.
           </p>
         </div>
         <div class="card-btn-div"></div>
