Added breadcrumbs to default settings.

--- a/default-settings.html
+++ b/default-settings.html
@@ -26,9 +26,10 @@
       </nav>
       <div id="default-settings-container" class="default-settings-container"> 
           <div id="default-specialties-container" class="default-specialties-container">
-            <div class="title-div">
+            <div class="default-title-div">
                 <h1 class="select-text">Select Specialty</h1>
               </div>
+              <div id="default-breadcrumbs" class="default-breadcrumbs"><p id="default-breadcrumbs-text" class="default-breadcrumbs-text"></p></div>
               <div id="Arthroscopy" class="default-specialty-buttons-div" align="center">
                 <a class="camera-button" href="#" data-camera="Arthroscopy">ARTHROSCOPY</a>
               </div>
@@ -83,7 +84,7 @@
            
           <!-- Camera Buttons -->
           <div id="default-cameras-container" id="top-camera-div" class="default-cameras-container">
-            <div class="title-div">
+            <div class="default-title-div">
               <h1 class="select-text">Select CCU</h1>
             </div>
             <div id="1688" class="default-camera-buttons-div" align="center">
