Adding back btn functionality.

--- a/default-settings.html
+++ b/default-settings.html
@@ -16,10 +16,12 @@
   </head>
   <body>
     <header id="home-section">
-      <nav class="navbar">
+      <nav class="default-navbar">
         <!-- Nav-menu Div-->
-
-        <a id="default-settings" href="./default-settings.html" class="logo">Default Settings</a>
+        <div id="back-btn-div" class="back-btn-div"></div>
+        <div id="default-logo-div" class="default-logo-div">
+          <a id="default-settings" href="./default-settings.html" class="default-logo">Default Settings</a>
+        </div>
       
         <div id="default-home-icon" class="default-home-icon" >
         </div>       
