Completing settings page, including back btn functionality.

--- a/default-settings.html
+++ b/default-settings.html
@@ -38,8 +38,8 @@
               <div id="Cystoscopy" class="default-specialty-buttons-div" align="center">
                 <a class="camera-button" href="#" data-camera="Cystoscopy">CYSTOSCOPY </a>
               </div>
-              <div id="Ent-Skull" class="default-specialty-buttons-div" align="center">
-                  <a class="camera-button" href="#" data-camera="Ent-Skull">ENT-SKULL</a>
+              <div id="ENT-Skull" class="default-specialty-buttons-div" align="center">
+                  <a class="camera-button" href="#" data-camera="ENT-Skull">ENT-SKULL</a>
                 </div>
               <div id="Flexiscope" class="default-specialty-buttons-div" align="center">
                 <a class="camera-button" href="#" data-camera="Flexiscope"
@@ -84,6 +84,8 @@
                 </div>
               </div>
               <div id="default-settings-subtitle-text" class="default-settings-subtitle-text">Default Settings</div>
+            </div>
+            <div id="default-parameter-settings-container" class="default-parameter-settings-container">
             </div>
           </div>
           <!-- End default settings -->
