Adding back button functionality.

--- a/printer.html
+++ b/printer.html
@@ -30,7 +30,11 @@
       <!-- <div class="title-div">
         <h1 class="">Printer Settings Coming Soon!</h1>
       </div> -->
-      <div class="title-div">
+      <div id="sdcs-printers-specialty-buttons-div">
+
+
+      </div>
+      <div id="select-title-div" class="title-div">
         <h1 id="title-element" class="title-element">Select SDC</h1>
       </div>
       <div id="sdc-div">
