Adding the different printer for the sdc3 and ultra.

--- a/printer.html
+++ b/printer.html
@@ -115,8 +115,7 @@
             </div>
           </div>
           <div
-            id="top-printer-printers-div"
-            style="display: none"
+            id="printer-printers-div"
             class="printer-printers-div"
           >
             <div class="first-botton-div">
